@@ -16,5 +16,5 @@
 #
 
 #sdk use java 21.0.1-amzn
-JAVA_OPTS="-Xlog:gc=error -Xms256M -Xmx256M -XX:+UnlockExperimentalVMOptions -XX:+UseEpsilonGC -XX:+AlwaysPreTouch"
+JAVA_OPTS="-Xlog:gc=error --enable-preview --add-modules=jdk.incubator.vector"
 time java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_berry120
